[gd_scene load_steps=7 format=3 uid="uid://bwqrccdtkw5i6"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_lg6bi"]
[ext_resource type="Script" path="res://Spells/Scripts/electric_arc.gd" id="2_o68g3"]
[ext_resource type="AudioStream" uid="uid://cpjxgallubn4f" path="res://Sounds/Continuous Electricity Sound Effect.mp3" id="3_xnl53"]

[sub_resource type="BoxShape3D" id="BoxShape3D_c32r4"]
size = Vector3(1, 0.01, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j4fga"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="PrismMesh" id="PrismMesh_n2ag0"]
material = SubResource("StandardMaterial3D_j4fga")
size = Vector3(1, 1, 0.001)

[node name="ElectricArc" instance=ExtResource("1_lg6bi")]
collision_layer = 16777216
collision_mask = 65543
mass = 0.001
gravity_scale = 0.0
script = ExtResource("2_o68g3")
description = "Spawn some electric arc on the of th player (like Palpatine)"
damages = 10
manaCost = 10
reloadTime = 2.0
castTime = 0.0

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_c32r4")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="." index="1"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, -0.5)
mesh = SubResource("PrismMesh_n2ag0")

[node name="Area3D" type="Area3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
collision_layer = 16777216
collision_mask = 8388611

[node name="CollisionShape3DArea" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_c32r4")

[node name="sfx_electrical" type="AudioStreamPlayer3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.81363)
stream = ExtResource("3_xnl53")
volume_db = -16.41
max_db = 0.0

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
